<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.todo.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_calendar"
        android:name="com.example.todo.ui.calendar.CalendarFragment"
        android:label="@string/title_calendar"
        tools:layout="@layout/fragment_calendar" />

    <fragment
        android:id="@+id/navigation_viewmods"
        android:name="com.example.todo.ui.viewmods.ViewModsFragment"
        android:label="@string/title_viewmods"
        tools:layout="@layout/fragment_viewmods" />

    <fragment
        android:id="@+id/navigation_addtask"
        android:name="com.example.todo.ui.addtask.AddTaskFragment"
        android:label="@string/title_addtask"
        tools:layout="@layout/fragment_addtask" />
</navigation>