<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/setup_back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:drawableLeft="@drawable/ic_back_button"
        android:drawablePadding="10dp"
        android:drawableTint="#6200EE"
        android:text="@string/back"
        android:textSize="20sp"
        android:fontFamily="@font/open_sans_bold"
        android:textColor="#6200EE"
        android:textAllCaps="false"
        android:paddingTop="40dp"
        android:paddingLeft="30dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:textSize="28sp"
        android:fontFamily="@font/open_sans_bold"
        android:textColor="#000000"
        android:paddingTop="20dp"
        android:paddingLeft="30dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account_description"
        android:textSize="16sp"
        android:fontFamily="@font/open_sans_bold"
        android:textColor="#8B8E8B"
        android:paddingTop="16dp"
        android:paddingLeft="30dp"/>

    <EditText
        android:id="@+id/get_user_name"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/user_input"
        android:drawableLeft="@drawable/user_name"
        android:drawablePadding="12dp"
        android:ems="10"
        android:fontFamily="@font/open_sans_bold"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:paddingLeft="12dp"
        android:textColor="#8B8E8B" />

    <EditText
        android:id="@+id/get_user_student_id"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:ems="10"
        android:drawableLeft="@drawable/user_student_id"
        android:drawablePadding="12dp"
        android:hint="@string/student_id"
        android:inputType="number"
        android:textColor="#8B8E8B"
        android:fontFamily="@font/open_sans_bold"
        android:background="@drawable/user_input"
        android:paddingLeft="12dp"/>

    <Button
        android:id="@+id/setup_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/create_account"
        android:textSize="14sp"
        android:textColor="#ffffff"
        android:fontFamily="@font/open_sans_bold"
        android:background="#6200EE"
        android:layout_marginHorizontal="100dp"
        android:layout_marginTop="50dp"/>

</LinearLayout>